# SimpScript

./: .gitignore  BUILD.md  CMakeLists.txt  Makefile  README.md
docs/: language_reference.md
editor-extensions/: README.md
editor-extensions/sublimetext/: README.md  SimpScript.sublime-color-scheme  SimpScript.sublime-syntax
editor-extensions/vscode/: README.md  language-configuration.json  package.json
editor-extensions/vscode/syntaxes/: simpscript.tmLanguage.json
editor-extensions/vscode/themes/: simpscript-dark.json  simpscript-light.json
examples/: clean.simp  complete.simp  debug.simp  hello.simp  math_logic.simp  simple.simp  string_arrays.simp  test2.simp  test3.simp
include/: AST.h  Environment.h  Interpreter.h  Lexer.h  Parser.h  Token.h  Value.h
src/: AST.cpp  Environment.cpp  Interpreter.cpp  Lexer.cpp  Parser.cpp  Token.cpp  Value.cpp  main.cpp
tests/: loop.simp  loop2.simp  test.simp
working_examples/: 01_hello.simp  02_variables.simp  03_conditionals.simp  04_loops.simp  05_arrays.simp  06_functions.simp  06_functions_simple.simp  06_minimal_function.simp  07_comprehensive.simp  08_arithmetic.simp  09_strings.simp
